k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: weather-ingress
  namespace: gpu-weather
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "900"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "900"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "30"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  rules:
    - http:
        paths:
          - path: /api/crop
            pathType: Prefix
            backend:
              service:
                name: crop-api-svc
                port:
                  number: 8001
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: weather-api-svc
                port:
                  number: 8000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: weather-ui-svc
                port:
                  number: 80
